fix spacing for breadcrumbs

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,10 @@ span.input-group-text {
   box-shadow: 2px 2px 4px  rgb(2, 28, 49, .5), -2px -2px 4px  rgb(2, 28, 49, .5)
 }
 
+ol.breadcrumb {
+  margin: 0;
+}
+
 ol.breadcrumb:empty {
   display: none;
 }
